# api-broker-tg

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
config/: .env.template
server/: urls.py
server/apps/api/: admin.py  models.py  serializers.py  urls.py  views.py
server/apps/api/migrations/: 0001_initial.py
server/apps/telegram/: admin.py  bot.py  models.py
server/apps/telegram/management/commands/: start_polling.py
server/apps/telegram/migrations/: 0001_initial.py
server/settings/: __init__.py
server/settings/components/: common.py  rest_framework.py
server/settings/environments/: development.py  production.py
